Twenty-Twenty: Alignment fix on Separator Block editor styles.
This changeset fixes an issue with some CSS rules of the "Wide Line" variation of the Separator Block’s editor stylesheet, for small, medium and large screens.

Props umesh84, iamjaydip, mukesh27, larrach.
Fixes #55896.

Built from https://develop.svn.wordpress.org/trunk@53459


git-svn-id: http://core.svn.wordpress.org/trunk@53048 1a063a9b-81f0-0310-95a4-ce76da25c4cd

--- a/wp-content/themes/twentytwenty/assets/css/editor-style-block-rtl.css
+++ b/wp-content/themes/twentytwenty/assets/css/editor-style-block-rtl.css
@@ -1392,8 +1392,8 @@ hr.wp-block-separator.is-style-dots::before {
 	}
 
 	hr.wp-block-separator.is-style-wide {
-		margin-right: -70px;
-		margin-left: -70px;
+		margin-right: auto;
+		margin-left: auto;
 	}
 
 
@@ -1430,8 +1430,8 @@ hr.wp-block-separator.is-style-dots::before {
 	/* BLOCK: SEPARATOR */
 
 	hr.wp-block-separator.is-style-wide {
-		margin-right: -150px;
-		margin-left: -150px;
+		margin-right: auto;
+		margin-left: auto;
 	}
 
 }
@@ -1465,8 +1465,8 @@ hr.wp-block-separator.is-style-dots::before {
 	/* BLOCK: SEPARATOR */
 
 	hr.wp-block-separator.is-style-wide {
-		margin-right: -200px;
-		margin-left: -200px;
+		margin-right: auto;
+		margin-left: auto;
 	}
 
 
