--- a/wp-content/themes/twentytwenty/assets/css/editor-style-block.css
+++ b/wp-content/themes/twentytwenty/assets/css/editor-style-block.css
@@ -1392,8 +1392,8 @@ hr.wp-block-separator.is-style-dots::before {
 	}
 
 	hr.wp-block-separator.is-style-wide {
-		margin-left: -70px;
-		margin-right: -70px;
+		margin-left: auto;
+		margin-right: auto;
 	}
 
 
@@ -1430,8 +1430,8 @@ hr.wp-block-separator.is-style-dots::before {
 	/* BLOCK: SEPARATOR */
 
 	hr.wp-block-separator.is-style-wide {
-		margin-left: -150px;
-		margin-right: -150px;
+		margin-left: auto;
+		margin-right: auto;
 	}
 
 }
@@ -1465,8 +1465,8 @@ hr.wp-block-separator.is-style-dots::before {
 	/* BLOCK: SEPARATOR */
 
 	hr.wp-block-separator.is-style-wide {
-		margin-left: -200px;
-		margin-right: -200px;
+		margin-left: auto;
+		margin-right: auto;
 	}
 
 
